2009-05-10  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] font-lock-magic): Add some hard cases.

2009-05-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compute-region-for-font-lock): Fix typo.

2009-05-10  Tobias C. Rittweiler  <tcr@freebits.de>

	Font-lock magic barfed on #+(test).

	* slime.el (slime-eval-feature-conditional): Renamed to
	`slime-eval-feature-expression'.
	(slime-unknown-feature-expression): New error symbol.
	(slime-eval-feature-expression): Signal it.
	(slime-search-suppressed-forms): Catch it.
	(slime-compute-region-for-font-lock): Guard against unbalanced
	parentheses.
	(slime-initialize-lisp-buffer-for-test-suite): New helper.
	([test] font-lock-magic): New test case.

	Reported by Kalyanov Dmitry.

2009-05-09  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-source-file-cache.lisp (read-snippet-from-string): New.

	* swank-sbcl.lisp (source-hint-snippet): Use it.
	(emacs-buffer-source-location): Use it, too.
	(string-path-snippet): Ditto. Additionally: Make sure the returned
	string is truncated by *SOURCE-SNIPPET-SIZE*.

2009-05-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-search-suppressed-forms-internal): Not properly
	factored out by earlier changeset.

2009-05-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (read-from-minibuffer-in-emacs): New.
	([struct] istate): Add METADATA-PLIST slot.
	(ensure-istate-metadata): New. To attach arbitrary metadata to an
	inspector page.
	(inspect-object): Adapted so methods on EMACS-INSPECT can look at
	*ISTATE*.

2009-05-08  Tobias C. Rittweiler  <tcr@freebits.de>

	#+#.foo confused the recent fontification changes. Fix that.

	* slime.el (slime-search-suppressed-forms-internal): New. Split
	from `slime-search-suppressed-forms'.
	(slime-search-suppressed-forms): Catch `invalid-read-syntax'
	errors.

2009-05-01  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-line-number-at-pos): Replaced with