@@ -1,3 +1,8 @@
+2009-05-11  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	(slime-eval-feature-expression): Guard for more erroneous
+	input (due to refontification while user's typing.)
+
 2009-05-10  Helmut Eller  <heller@common-lisp.net>
 
 	* slime.el ([test] font-lock-magic): Add some hard cases.
